<resources>
    <string name="app_name">Сервико Доставка</string>
    <string name="login">Получить пароль</string>
    <string name="accept">Подтвердить</string>
    <string name="input_code">Введите код</string>
    <string name="phone">Введите номер телефона</string>
    <string name="password">Пароль</string>
    <string name="need_set_permission">Необходимо установить разрешения</string>
    <string name="set_permissions_in_settings">В настройках установите все разрешения для программы!</string>
    <string name="settings">Настройки</string>
    <string name="select_partner">Выберите адрес доставки</string>
    <string name="my_orders">Мои заказы</string>
    <string name="my_shops">Мои магазины</string>
    <string name="feedback">Обратная связь</string>
    <string name="exit">Выход</string>
    <string name="active">Активные</string>
    <string name="finished">Заверш...</string>
    <string name="unpayed">Неоплач...</string>
    <string name="catalog">Каталог</string>
    <string name="balance">Долги</string>
    <string name="main">Главная</string>
    <string name="basket">Корзина</string>
    <string name="actions">Акции</string>
    <string name="action_def">Условия акции</string>
    <string name="profile">Профиль</string>
    <string name="messages">Уведомления</string>
    <string name="content_description_search_price">Поиск товара</string>
    <string name="search_price">Поиск товара</string>
    <string name="price_loading">Загрузка прайс-листа...</string>
    <string name="in_basket">В корзину</string>
    <string name="show_condition">Условия акции</string>
    <string name="out_basket">Убрать товар</string>
    <string name="send">ОТПРАВИТЬ ЗАКАЗ</string>
    <string name="sending">Отправка заказа</string>
    <string name="gift">Подарок</string>
    <string name="description">Дополнительно</string>
    <string name="not_active_order">У вас нет активных заказов</string>
    <string name="empty_list">Список пуст</string>
    <string name="avail_qty">В наличии на складе</string>
    <string name="order_pref">Параметры заказа</string>
    <string name="delivery_date">Желаемая дата доставки</string>
    <string name="remark">Примечание к заказу</string>
    <string name="confirmSend">Отправка заказа</string>
    <string name="price_load_ok"><![CDATA[ <font color="#FFFFFF"><b>OK</b></font>]]></string>
    <string name="price_load_in_process"><![CDATA[  <font color="#FFFFFF"><i>Загрузка</i></font>]]></string>
    <string name="can_resend_after">Повторный запрос\nчерез %1$d сек.</string>
    <string name="get_code_by_sms">ПОЛУЧИТЬ КОД ПО SMS</string>
    <string name="get_code_by_sms_u"><u>ПОЛУЧИТЬ КОД ПО SMS</u></string>
    <string name="get_code_by_phone">ПОЛУЧИТЬ КОД ПО ЗВОНКУ</string>
    <string name="get_code_by_phone_u"><u>ПОЛУЧИТЬ КОД ПО ЗВОНКУ</u></string>
    <string name="mts_alert">Для абонентов Мегафон и МТС\nполучение кода возможно только по звонку</string>

    <string name="choose">Выбрать</string>
    <string name="action">Акция</string>
    <string name="actions_of_month">Акции месяца</string>
    <string name="orders">Заказы</string>
    <string name="order_caps">ЗАКАЗ</string>
    <string name="date_caps">ДАТА</string>
    <string name="sum_caps">СУММА</string>

    <string name="order_active">активный</string>
    <string name="order_done">доставлен</string>
    <string name="order_payed">оплаченный</string>
    <string name="order_unpayed">неоплаченный</string>

    <string name="type_from_sms">ВВЕДИТЕ КОД ИЗ СМС</string>
    <string name="type_from_phone">ВВЕДИТЕ ПОСЛЕДНИЕ\n4 ЦИФРЫ НОМЕРА</string>

    <string name="contract_row">контракт: %1$s</string>
    <string name="name_row">ФИО: %1$s</string>
    <string name="phone_row">телефон: %1$s</string>

    <string name="basket_qty">Позиций: %1$d</string>
    <string name="basket_sum">Итого: %1$.02f &amp;#x20bd</string>

    <string name="cand_dial">Не могу набрать номер</string>

    <string name="in_pack">упаковки</string>
    <string name="in_items">штуки</string>
    <string name="in_items_st">шт</string>
    <string name="in_pack_st">уп</string>
    <string name="in_pack_param">%1$d/уп.</string>

    <string name="back">Назад</string>

    <string name="error">Ошибка</string>
    <string name="smth_wrong">Что-то пошло не так</string>
    <string name="repeat_send">ПОВТОРИТЬ</string>
    <string name="empty_bin">Для оформления заказа добавьте\nтовары в корзину</string>
    <string name="move_to_catalog">ПЕРЕЙТИ В КАТАЛОГ</string>

    <string name="order_filter_by_state">По статусу</string>
    <string name="order_filter_by_payment">По оплате</string>
    <string name="order_filter_contracts">По контракту</string>

    <string name="price_filter_by_mfr">По производителю</string>
    <string name="price_filter_by_vol">По объему</string>
    <string name="price_filter_by_action">Акционный товар</string>

    <string name="price_filter_v01">100 мл</string>
    <string name="price_filter_v25">250 мл</string>
    <string name="price_filter_v33">330 мл</string>
    <string name="price_filter_v5">0.5 л</string>
    <string name="price_filter_v7">0.7 л</string>
    <string name="price_filter_v1">1 л</string>
    <string name="price_filter_v15">1.5 л</string>
    <string name="price_filter_v20">2 л</string>
    <string name="price_filter_v29">более 2 л</string>

    <string name="apply">ПРИМЕНИТЬ</string>
    <string name="phone_number_incorrect">Неверно введен номер телефона</string>


    <string name="reset_filter">Сбросить фильтры</string>
    <string name="order_filter_active">Активный</string>
    <string name="order_filter_dlv">Доставленный</string>

    <string name="order_filter_payed">Оплаченный</string>
    <string name="order_filter_unpayed">Неоплаченный</string>

    <string name="sort_ascending">По увеличиению цены</string>
    <string name="sort_descending">По уменьшению цены</string>
    <string name="sort_discount">По скидке</string>

    <string name="file_provider">com.serviko.sales.files</string>
    <string name="channel_id">com.serviko.sales.default_channel</string>
    <string name="channel_name">Новости</string>
    <string name="channel_description">Новости, информация о заказах и скидках</string>

    <string name="update_text">ВНИМАНИЕ!\nДоступна новая версия приложения.\nФайл установки сейчас будет скачан,\nпосле скачивания установите вручную.</string>
    <string name="server_fault">В данный момент сервер недоступен, попробуйте позже</string>
    <string name="kupec_action">Акция Купец</string>
    <string name="kupec_descr">Скидка 15% - 33% на позиции Алкоголь при удержании цены на полке\nДля участия свяжитесь с вашим торговым представителем\nАссортимент:</string>
    <string name="number">№</string>
    <string name="items">Номенклатура</string>
    <string name="cost_tt">Цена</string>
    <string name="cost_board">Цена на полке</string>
    <string name="cost_margin">Наценка</string>
    <string name="name">Наименование</string>
</resources>