<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/title_back"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            />
    </LinearLayout>

    <Button
        android:id="@+id/myOrders"
        style="@style/ProfileButton"
        android:layout_alignParentTop="true"

        android:layout_marginTop="80dp"
        android:text="@string/my_orders" />

    <Button
        android:id="@+id/myShops"
        style="@style/ProfileButton"
        android:layout_below="@+id/myOrders"

        android:layout_marginTop="32dp"
        android:text="@string/my_shops" />

    <Button
        android:id="@+id/feedback"
        style="@style/ProfileButton"
        android:layout_above="@id/exit"

        android:layout_marginBottom="32dp"
        android:text="@string/feedback" />

    <Button
        android:id="@+id/exit"
        style="@style/ExitButton"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="40dp"
        android:text="@string/exit" />
</RelativeLayout>