<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@drawable/rounded_corner_kupec"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_margin="8dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/kupec"
        />

    <TextView
        android:id="@+id/title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintLeft_toRightOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:text="@string/kupec_action"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/action_descr"
        android:layout_marginStart="@dimen/kupec_margin"
        android:layout_marginEnd="@dimen/kupec_margin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/kupec_descr"
        />

    <LinearLayout
        android:id="@+id/head"
        app:layout_constraintTop_toBottomOf="@id/action_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/kupec_margin"
        android:layout_marginEnd="@dimen/kupec_margin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        >
        <TextView
            style="@style/KupecTextHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/name"
            android:background="@color/kupec_back_table"
            android:layout_margin="1dp"
            />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/KupecTextHead"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cost_tt"
            android:background="@color/kupec_back_table"
            />
        <TextView
            style="@style/KupecTextHead"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_height="wrap_content"
            android:text="@string/cost_board"
            android:background="@color/kupec_back_table"
            />
        <TextView
            style="@style/KupecTextHead"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cost_margin"
            android:background="@color/kupec_back_table"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/head"
        android:id="@+id/items"
        android:layout_marginStart="@dimen/kupec_margin"
        android:layout_marginEnd="@dimen/kupec_margin"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>