<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_back"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_left"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/orders"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            />
        <ImageView
            android:id="@+id/filter"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/OrderHeadText"
                android:text="@string/order_caps"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/OrderHeadText"
                android:text="@string/date_caps"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/OrderHeadText"
                android:text="@string/sum_caps"
                />
        </LinearLayout>
        <ListView
            android:id="@+id/lvItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/filter_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.fragment.app.FragmentContainerView>
    </FrameLayout>
</LinearLayout>