<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPartner"
                style="@style/PartnerTextView2"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/ivPartnerExpand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_down_36dp" />

        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/order_activity_top"
                app:title="@string/my_orders" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/orderState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:checkedButton="@id/btnActive"
            app:singleSelection="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnActive"
                style="@style/TextButton2"
                android:layout_width="@dimen/title_button_size"
                android:layout_height="wrap_content"
                android:text="@string/active" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnComplete"
                style="@style/TextButton2"
                android:layout_width="@dimen/title_button_size"
                android:layout_height="wrap_content"
                android:text="@string/finished" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUnpayed"
                style="@style/TextButton2"
                android:layout_width="@dimen/title_button_size"
                android:layout_height="wrap_content"
                android:text="@string/unpayed" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/llEmpty"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_receipt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_list"
                android:textColor="@color/bkgColor"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swpRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_weight="1">
            <ListView
                android:id="@+id/lvItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPrice"
            style="@style/TextButton2"
            android:layout_width="@dimen/text_button_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/catalog" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btMenu"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/main_activity_bottom" />
</LinearLayout>