<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/rounded_corner"
    android:translationZ="6dp"
    android:elevation="3dp"
    android:paddingTop="8dp"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="16dp"
        android:paddingTop="8dp"
        android:stretchColumns="0"
        >
        <TableRow
            android:id="@+id/back"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_back" />
                <TextView
                    style="@style/OrderFilterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/trV01"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v01"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trV25"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v25"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trV33"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v33"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trV5"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v5"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trV7"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v7"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trV1"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v1"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trV15"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v15"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>
        <TableRow
            android:id="@+id/trV2"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v20"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trV29"
            android:background="@drawable/order_filter_back"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                style="@style/OrderFilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_filter_v29"
                />

            <ImageView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_select_off"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>