<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/title_back"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_left"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/error"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            />

        <ImageView
            android:visibility="invisible"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_left"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_error_send"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/smth_wrong"
            />

        <TextView
            android:id="@+id/error_message"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:lines="6"
            android:scrollbars="vertical"
            />

        <Button
            android:id="@+id/btnRepeat"
            style="@style/BasketButton"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_send"
            />
    </LinearLayout>
</LinearLayout>